RESOLVED FIXED297076
REGRESSION(298142@main): Web content may be temporarily offset during Safari View Controller presentation
https://bugs.webkit.org/show_bug.cgi?id=297076
Summary REGRESSION(298142@main): Web content may be temporarily offset during Safari ...
Abrar Rahman Protyasha
Reported 2025-08-07 13:39:04 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-08-07 14:06:04 PDT
EWS
Comment 2 2025-08-07 17:03:31 PDT
Committed 298370@main (30fd586f387b): <https://commits.webkit.org/298370@main> Reviewed commits have been landed. Closing PR #49081 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.